--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 	<link rel="shortcut icon" href="https://th.bing.com/th/id/OIP.o9-xXo_hlIwsoGcu99E0hQHaHa?w=205&h=205&c=7&r=0&o=5&dpr=1.6&pid=1.7" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
-    <style>
+   <script src="https://apis.google.com/js/platform.js" async defer></script>
+   <meta name="google-signin-client_id" content="444881544975-fcelmef9narr0k87k470dh3c037k7hsa.apps.googleusercontent.com">
+   <style>
         
         .link-button {
             display: inline-block;
@@ -34,7 +36,7 @@
     <div id="nav">
         <h3><b>BLACK</b>PHOENIX*</h3>
         <div style="text-align: center; margin-top: 20px;">
-            <a href="course.html" class="link-button">Visit My Course</a>
+            <a href="http://localhost/Final_Reclaiming_Warrior_Complete/auth/register.php" class="link-button">Visit My Course</a>
         </div>
     </div>
     <div id="main">
