--- a/course.html
+++ b/course.html
@@ -13,11 +13,13 @@
 <body>
   <div id="nav">
     <img src="https://www.freepnglogos.com/uploads/warriors-png-logo/reclaiming-warrior-png-logo-10.png" alt="" />
+	 <a href="profile.php"><h4>👤Profile</h4></a>
      <a href="first.html"><h4>TOP CYBERSECURITY RANGE</h4></a>
      <a href="second.html"><h4>Cyber Security Training</h4></a>
      <a href="third.html"><h4>Cyber Threat Challenges</h4></a>
      <a href="fourth.html"><h4>Cryptography</h4></a>
     <a href="merged_payment_gateway.php"><h4>Purchase Workshop</h4></a>
+	<a href="http://localhost/Final_Reclaiming_Warrior_Complete/auth/register.php"><h4>【﻿⏻】</h4></a>
   </div>
   <div id="cursor"></div>
   <div id="cursor-blur"></div>
